HYDRAN-1013: Add requestparameter to get the latest templates only