@@ -31,6 +31,11 @@ public class DbIntegration {
 	}
 
 	@Transactional(readOnly = true)
+	public List<TemplateEntity> getAllLatestTemplates(final String municipalityId) {
+		return templateRepository.findAllByMunicipalityIdAndLatestTrue(municipalityId);
+	}
+
+	@Transactional(readOnly = true)
 	public Optional<TemplateEntity> getTemplate(final String municipalityId, final String identifier, final String version) {
 		return Optional.ofNullable(version)
 			.map(Version::parse)
@@ -42,24 +47,31 @@ public class DbIntegration {
 	public Optional<TemplateEntity> findTemplate(final String municipalityId, final List<KeyValue> metadata) {
 		try {
 			return templateRepository.findOne(toTemplateEntitySpecification(municipalityId, metadata));
-		} catch (IncorrectResultSizeDataAccessException e) {
+		} catch (final IncorrectResultSizeDataAccessException _) {
 			throw Problem.valueOf(Status.NOT_FOUND, "Metadata query resulted in multiple matching templates");
 		}
 	}
 
 	@Transactional(readOnly = true)
-	public List<TemplateEntity> findTemplates(final String municipalityId, final Specification<TemplateEntity> filter) {
-		var filterWithMunicipalityId = filter.and((root, query, criteriaBuilder) -> criteriaBuilder.equal(root.get(TemplateEntity_.municipalityId), municipalityId));
+	public List<TemplateEntity> findTemplates(final String municipalityId, final Specification<TemplateEntity> filter, final boolean showOnlyLatest) {
+		var filterWithMunicipalityId = filter.and((root, _, criteriaBuilder) -> criteriaBuilder.equal(root.get(TemplateEntity_.municipalityId), municipalityId));
+		if (showOnlyLatest) {
+			filterWithMunicipalityId = filterWithMunicipalityId.and(Specifications.isLatest());
+		}
 		return templateRepository.findAll(filterWithMunicipalityId);
 	}
 
 	@Transactional(readOnly = true)
-	public List<TemplateEntity> findTemplates(final String municipalityId, final List<KeyValue> metadata) {
-		return templateRepository.findAll(toTemplateEntitySpecification(municipalityId, metadata));
+	public List<TemplateEntity> findTemplates(final String municipalityId, final List<KeyValue> metadata, final boolean showOnlyLatest) {
+		var specification = toTemplateEntitySpecification(municipalityId, metadata);
+		if (showOnlyLatest) {
+			specification = specification.and(Specifications.isLatest());
+		}
+		return templateRepository.findAll(specification);
 	}
 
 	Specification<TemplateEntity> toTemplateEntitySpecification(final String municipalityId, final List<KeyValue> metadata) {
-		var specifications = new ArrayList<>(metadata.stream()
+		final var specifications = new ArrayList<>(metadata.stream()
 			.map(entry -> Specifications.hasMetadata(entry.getKey(), entry.getValue()))
 			.toList());
 
@@ -67,36 +79,48 @@ public class DbIntegration {
 			throw new IllegalStateException("No metadata specifications supplied");
 		}
 
-		var specification = specifications.remove(0);
-		for (var additionalSpecification : specifications) {
+		var specification = specifications.removeFirst();
+		for (final var additionalSpecification : specifications) {
 			specification = specification.and(additionalSpecification);
 		}
 
-		specification = specification.and((root, query, criteriaBuilder) -> criteriaBuilder.equal(root.get(TemplateEntity_.municipalityId), municipalityId));
+		specification = specification.and((root, _, criteriaBuilder) -> criteriaBuilder.equal(root.get(TemplateEntity_.municipalityId), municipalityId));
 		return specification;
 	}
 
 	public TemplateEntity saveTemplate(final TemplateEntity templateEntity) {
+		if (templateEntity.isLatest()) {
+			templateRepository.findByIdentifierAndMunicipalityIdAndLatestTrue(templateEntity.getIdentifier(), templateEntity.getMunicipalityId())
+				.filter(existing -> !existing.getId().equals(templateEntity.getId()))
+				.ifPresent(existing -> {
+					existing.setLatest(false);
+					templateRepository.save(existing);
+				});
+		}
 		return templateRepository.save(templateEntity);
-	}
-
-	public boolean existsByIdentifier(final String municipalityId, final String identifier) {
-		return templateRepository.existsByIdentifierAndMunicipalityId(identifier, municipalityId);
 	}
 
 	public void deleteTemplate(final String municipalityId, final String identifier, final String version) {
 		Optional.ofNullable(version)
 			.map(Version::parse)
 			.ifPresentOrElse(parsedVersion -> {
-				var templateEntity = templateRepository.findByIdentifierAndVersionAndMunicipalityId(identifier, parsedVersion, municipalityId)
+				final var templateEntity = templateRepository.findByIdentifierAndVersionAndMunicipalityId(identifier, parsedVersion, municipalityId)
 					.orElseThrow(() -> Problem.valueOf(Status.NOT_FOUND, "Unable to find template '" + identifier + ":" + parsedVersion + "'"));
+				final var wasLatest = templateEntity.isLatest();
 				templateRepository.delete(templateEntity);
+				if (wasLatest) {
+					templateRepository.flush();
+					templateRepository.findLatestByIdentifierAndMunicipalityId(identifier, municipalityId)
+						.ifPresent(next -> {
+							next.setLatest(true);
+							templateRepository.save(next);
+						});
+				}
 			}, () -> {
 				if (!templateRepository.existsByIdentifierAndMunicipalityId(identifier, municipalityId)) {
 					throw Problem.valueOf(Status.NOT_FOUND, "Unable to find template '" + identifier + "'");
 				}
-				templateRepository.findByIdentifierAndMunicipalityId(identifier, municipalityId)
-					.forEach(templateRepository::delete);
+				templateRepository.deleteAll(templateRepository.findByIdentifierAndMunicipalityId(identifier, municipalityId));
 			});
 	}
 }
